--- a/Estilo.css
+++ b/Estilo.css
@@ -16,10 +16,11 @@ h1{
 }
 .menuinicial{
     padding: 2rem;
+    background: radial-gradient(lightblue, rgb(81, 167, 224), rgb(34, 52, 211));
+    
 }
 .menuinicial ul{
     list-style: none;
-    background-color: rgb(92, 214, 214);
     display: flex;
     justify-content: space-evenly;
     padding: 2rem;
@@ -73,7 +74,7 @@ hr{
 .Productos1{
     margin-top: 6vh;
 }
-.productoshome{
+.Productos1__titulo{
     display: flex;
     margin-top: 3rem;
     margin-left: 5vw;
@@ -82,6 +83,9 @@ hr{
     font-style: italic;
     line-height: 8mm;
     justify-content: space-evenly;
+}
+.Productos1__pr:hover{
+    transform: scale(1.5, 1.5);
 }
 .sucursales{
     list-style: none;
@@ -97,6 +101,9 @@ hr{
 }
 .sucursales li a:hover{                    
     background-color:blanchedalmond;
+}
+.sucursales__img:hover{
+    transform: scale(1.3, 1.3);
 }
 .menu2{
     list-style: none;
