--- a/Estilo.css
+++ b/Estilo.css
@@ -4,7 +4,7 @@
     box-sizing: border-box   
 }
 body {
-    background-image: url(../Varios/15507.png);
+    background-image: url(https://images3.alphacoders.com/912/thumb-1920-912807.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
