--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -15,41 +15,13 @@ body{
         width: 90%;
         margin: 20px auto;
         grid-area: headerInicio;
-        .menuinicial{
-            padding: 2rem;
-            ul{
-                list-style: none;
-                display: flex;
-                justify-content: space-evenly;
-                padding: 2rem;
-                height: auto;
-                text-align: center;
-                li{
-                    font-size: 1.5rem;
-                    &hover ul{
-                        display: block;
-                    }
-                    ul{
-                        display: none;
-                    }
-                    a{
-                        display: inline-block;
-                        color: aquamarine;
-                        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-                        font-style: bold;
-                        &hover{
-                            color: rgb(155, 97, 210);
-                        }  
-                    }
-                }
-            }
-        }
+        @import "menuinicial";
     } 
     .mainInicio{
         grid-area: mainInicio;
         .intro{
             line-height: 7mm;
-            width: 80%;
+            width: 70%;
             height: 400px;
             position: relative;
             margin: 2rem auto;
@@ -68,29 +40,128 @@ body{
         width: 90%;
         grid-area: footerInicio;
         .sucursales{
-            list-style: none;
-            font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
             display: flex;
-            flex-direction: row;
             justify-content: space-around;
-            margin: 5rem auto;
-            .sucusales__img:hover{
+            margin: 4rem auto;
+            .sucusales__ubi:hover {
                 transform: scale(1.2, 1.2);
             }
         }
-        .menu2{
-            list-style: none;
-            display: flex;
-            flex-direction: row;
-            justify-content: space-evenly;
-            li a{
-                color: black;
-                font-weight: bold;
-                font-size: larger;
-                &:hover{
-                    background-color: aquamarine;
-                }
-            }
+        @import "menu2";
+    }
+}
+.ContenedorAbout{
+    width: 90%;
+    .HAbout{
+        width: 90%;
+        margin: auto;
+        grid-area: HAbout;
+        @import "menuinicial";
+    }
+    .main{
+        background-color:rgb(80, 103, 162);
+        line-height: 25px;
+        border: 2px black solid;
+        width: 90%;
+        height: 80%;
+        padding: 1rem;
+        margin: 2rem auto;
+        text-align: justify;
+        font-family: Georgia, 'Times New Roman', Times, serif;
+        overflow: auto;
+        grid-area: main;
+    }
+    .contGrid{
+        width: 90%;
+        height: auto;
+        margin: 20px auto;
+        display: grid;
+        grid-template-columns: 1fr 2fr 1fr;
+        grid-template-rows: 2fr 2fr;
+        grid-gap: 2rem;
+        grid-template-areas: 
+        "foto1 videonos videonos foto2"
+        "foto3 videonos videonos foto4";
+        .videonos{
+            grid-area: videonos;
+            width: 90%;
+            margin: 20px auto;
+        }
+        .foto1{
+            grid-area: foto1;
+        }
+        .foto2{
+            grid-area: foto2;
+        }
+        .foto3{
+            grid-area: foto3;
+        }
+        .foto4{
+            grid-area: foto4;
         }
     }
-}    
+    .Fabout{
+        margin-top: 10rem;
+        grid-area: Fabout;
+        .p-1{
+            @import "menu2";
+        }
+    }
+}
+.contenedorcontacto{
+    width: 90%;
+    margin: 4rem auto;
+    .Hcontact{
+            width: 90%;
+            grid-area: Hcontact;
+            @import "menuinicial";
+    }
+    .Forcoment{
+        width: 90%;
+        grid-area: Forcoment;
+    }
+    .footcontact{
+        width: 90%;
+        grid-area: footcontact;
+        .sucursales{
+            display: flex;
+            justify-content: space-around;
+            margin: 4rem auto;
+            .sucusales__ubi:hover{
+                transform: scale(1.2, 1.2);
+            }
+        }
+        .p-1{
+            @import "menu2";
+        }
+    }
+}
+@media screen and (max-width:480px) {
+    .contenedorcontacto {
+        width: 90%;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: auto 1fr auto;
+        grid-template-areas:
+        "Hcontact"
+        "Forcoment"
+        "footcontact";
+    }
+}
+@media screen and (max-width:480px) {
+    .ContenedorAbout {
+        width: 90%;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: auto auto auto 1fr;
+        grid-template-areas:
+        "HAbout"
+        "main"
+        "foto1"
+        "foto2"
+        "foto3"
+        "foto4"
+        "videonos"
+        "Fabout";
+    }    
+}     
